# PreprocessingV2.0

./: .coverage  .gitignore  .pre-commit-config.yaml  ENHANCED_OUTPUT_README.md  HYBRID_ML_IMPLEMENTATION.md  IYILESTIRME_ROADMAP.md  MONITORING_README.md  Makefile  README.md  TEST_SUITE_SUMMARY.md  acceptance_results.txt  adaptive_config.json  addrnorm_cli.py  coverage.json  coverage.xml  debug_ml_pattern.py  debug_preprocess.py  demo_adaptive.py  demo_contracts.py  demo_enhanced.py  demo_enhanced_output.py  demo_explainer.py  demo_explanation.py  demo_hybrid_simple.py  demo_ml_advanced.py  demo_ml_pattern_generation.py  demo_monitoring.py  demo_monitoring_system.py  demo_patterns.py  demo_preprocess.py  demo_test_suite.py  demo_thresholds.py  final_metrics.json  golden_test_results.json  ilceler.csv  iller.csv  output_metrics.json  pyproject.toml  pytest.ini  pytest_report.html  (+21 more)
.cache/: pattern_stats.json
.github/: copilot-instructions.md
.github/workflows/: comprehensive-tests.yml  test-and-benchmark.yml
.hypothesis/constants/: 066926f11f3e1e1d  0bffd7a136c8a3e9  1786775fcd36e2b1  179bea2492c4a23f  1dcb236b1caf6d10  2b380b0552b08587  2bdb6703eefd40f5  2cdc86b1b8aae76d  38f833259f84672c  3ba0db74658c4b42  44cfc3813d706f33  46677b8ed5645e96  48c46668dbcc7cb3  4da03d6006af8227  5342d16bdb7ab4e2  56d66bb2e08ddfbd  577f41d6d6e488b2  58e12fcee50e2c4e  5b5e880b6db93973  6022c2e7de97ceee  64aa2d8378c5c14f  721054896a108ca0  721b5af495d0d9e4  80838f7cc731fd32  832b4a9857ff2476  944b9297fa7a3690  9852e3a6f14065c1  9b8cfb87bab7b470  a90f7f551cd18bad  a97f7f0ec811fa3f  aa13cc9afe193bec  b43c77b918a6e7ed  b6d0bab95c39d195  c9212907eb7db836  ca57693deff46d93  cc15a433d2171280  d40f86b2b6fd8ecf  d42ffc0b2b8b2afe  d9ba2d602546fd8f  da39a3ee5e6b4b0d  (+9 more)
archived_reports/: adaptive_learning_report_20250825_182445.json  comprehensive_improvement_report_20250825_182006.json  comprehensive_validation_report_20250825_182624.json  comprehensive_validation_report_20250825_182633.json  enhancement_report_20250825_181839.json  final_test_report_20250825_175557.json  optimization_test_report_20250825_181339.json  test_samples_report_20250825_173659.json  test_samples_report_20250825_174015.json  validation_report_20250825_172414.json
data/: example_explanations.txt  train_samples.csv
data/examples/: explanations.txt  raw_addresses_tr.txt
data/patterns/: tr.yml
data/resources/: abbr_tr.yaml  cities_tr.csv  districts_tr.json
data/train/: test_ner.jsonl  test_ner_improved.jsonl  train_ner.jsonl  train_ner_improved.jsonl
demo_adaptive_data/: demo_config.json  demo_state.json  demo_state_tracker.json
docs/: API_README.md  ML_FALLBACK_SUMMARY.md  PATTERN_SUMMARY.md  PREPROCESSING_SUMMARY.md  TESTING.md  csv_contract.md  explanation_parser.md
enhanced_output_demo/: enhanced_batch.csv  enhanced_batch.json  enhanced_batch.xml  enhanced_schema.json  enhanced_schema.md  migration_guide.md
examples/: ml_pattern_demo.py
full_pipeline_demo/: ml_pattern_system_report_20250824_011942.json  ml_pattern_system_report_20250824_013223.json
models/turkish_address_ner/: config.cfg  (+2 more)
monitoring_data/: metrics_20250824_132713.json  metrics_20250824_132714.json  metrics_20250824_132715.json  metrics_20250824_132716.json  metrics_20250824_132717.json  metrics_20250824_132718.json  metrics_20250824_132719.json  metrics_20250824_132721.json  metrics_20250824_132722.json  metrics_20250824_132723.json  metrics_20250824_132724.json  metrics_20250824_132725.json  metrics_20250824_132726.json  metrics_20250824_132727.json  metrics_20250824_134040.json  metrics_20250824_134041.json  metrics_20250824_134042.json  metrics_20250824_134043.json  metrics_20250824_134044.json  metrics_20250824_134045.json  metrics_20250824_134046.json  metrics_20250824_134047.json  metrics_20250824_134048.json  metrics_20250824_134049.json  metrics_20250824_150807.json  metrics_20250824_150808.json  metrics_20250824_150809.json  metrics_20250824_150810.json  metrics_20250824_150811.json  metrics_20250824_150812.json  metrics_20250824_150813.json  metrics_20250824_150814.json  metrics_20250824_150815.json  metrics_20250824_150816.json  metrics_20250824_150817.json  metrics_20250824_150818.json  metrics_20250824_151012.json  metrics_20250824_151013.json  metrics_20250824_151015.json  metrics_20250824_151016.json  (+62 more)
monitoring_reports/: performance_data_20250824_023146.csv  performance_data_20250824_023215.csv  performance_data_20250824_023301.csv  system_metrics_20250824_023146.json  system_metrics_20250824_023215.json  system_metrics_20250824_023301.json  system_report_20250824_023146.html  system_report_20250824_023215.html  system_report_20250824_023301.html
pattern_reviews/: review_20250825_020512.json  review_20250825_020709.json  review_20250825_020744.json  review_20250825_020809.json  review_20250825_020915.json  review_20250825_021144.json  review_20250825_021303.json  review_20250825_021725.json  review_20250825_021811.json
reports/: TEMIZLIK_RAPORU.md  TEST_BASARIM_RAPORU.md  coverage.json  pytest_report.html  sonuclar.csv  test_report.json
results/: model_comparison_results.csv  model_summary.csv
schemas/: output.address.json
scripts/: addrnorm.bat  compare_algorithms.py  convert_csv_to_ner.py  convert_csv_to_ner_improved.py  demo_fallback.py  demo_ml_fallback.py  demo_ner.py  explanation_simple_demo.py  export_model_results_csv.py  monitoring_cli.py  predict_ner.py  process_geo_data.py  show_converted_data.py  synthesize_tr_addresses.py  test_fallback_detailed.py  test_fallback_simple.py  test_geo_validation.py  train_ner.py  validate_fallback.py  validate_geo_system.py
tests/: conftest.py  test_adaptive.py  test_api.py  test_api_fixed.py  test_automation.py  test_cli.py  test_cli_coverage.py  test_contracts.py  test_explainer.py  test_explanation.py  test_explanation_simple.py  test_fuzz.py  test_golden.py  test_integration_hybrid.py  test_ml.py  test_pattern_compiler_coverage.py  test_patterns.py  test_preprocess.py  test_preprocess_integration.py  test_regression.py  test_thresholds.py  test_validation.py
(+110 files in other folders)
