[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "addrnorm"
version = "0.1.0"
description = "Address Normalizer Monorepo"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest",
    "jsonschema",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pyyaml",
    "unicodedata2",
    "spacy>=3.4.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
    "tqdm>=4.64.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = [
    "E402",  # Module level import not at top of file (needed for path manipulation)
]

[tool.ruff.lint.isort]
force-single-line = false

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"
warn_return_any = false
warn_unused_ignores = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src/addrnorm --cov-fail-under=85"
testpaths = ["tests"]

[project.scripts]
addrnorm-preprocess = "addrnorm.preprocess.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/address-normalizer"
